Add new action GET by Id as a URL path variable and few more tests.